ArrayList -> List Test updated. InMemoryHistoryManager refactored